clean tbody tag

--- a/_downloads/2009-06-24-download-rocks-5-2-chimichanga.html
+++ b/_downloads/2009-06-24-download-rocks-5-2-chimichanga.html
@@ -19,18 +19,15 @@ Base, and Web Server Rolls (these rolls are required). Feel free to select any o
 <p>Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/md5sum.txt">MD5 checksums</a> for all the rolls you download.</p>
 
 <hr />
-<table width="125%">
-<tbody>
+
+<table width="100%">
 <tr>
-<th width="40%" align="left">Athlon, Pentium, Xeon:
-i386</th>
-<td align="right"><img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt=""
-/></td>
+<th width="40%" align="left">Athlon, Pentium, Xeon: i386</th>
+<td align="right"><img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt="" /></td>
 </tr>
-</tbody>
 </table>
+
 <table border="0" width="100%" align="center">
-<tbody>
 <tr>
 <th width="50%" align="center">CDs</th>
 <th width="50%" align="center">jumbo (DVD)</th>
@@ -42,166 +39,135 @@ i386</th>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/kernel-5.2-0.i386.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/kernel-5.2-0.i386.disk1.iso">http</a>
 </span></td>
-<td rowspan="4" align="center">Boot, Core, &amp; OS<br />
-Roll<br />
-<span>dvd only</span>
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/area51+base+bio+ganglia+hpc+java+kernel+os+sge+web-server+xen-24.06.2009-06.00.03.i386.disk1.iso">ftp</a>
+<td rowspan="8" align="center">Boot, Core, &amp; OS Roll<br /> <span>dvd only</span>
+<span><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/area51+base+bio+ganglia+hpc+java+kernel+os+sge+web-server+xen-24.06.2009-06.00.03.i386.disk1.iso">ftp</a>
 </span></td>
 </tr>
+
 <tr>
-<td align="center">Core Roll
-<span>
+<td align="center">Core Roll <span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/area51+base+ganglia+hpc+java+sge+web-server+xen-24.06.2009-10.02.44.i386.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/area51+base+ganglia+hpc+java+sge+web-server+xen-24.06.2009-10.02.44.i386.disk1.iso">http</a>
 </span></td>
 </tr>
+
 <tr>
-<td align="center">OS Roll &#8211; disk1
-<span>
+<td align="center">OS Roll &#8211; disk1 <span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk1.iso">http</a>
 </span></td>
 </tr>
+
 <tr>
-<td align="center">OS Roll &#8211; disk2
-<span>
+<td align="center">OS Roll &#8211; disk2 <span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk2.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk2.iso">http</a>
 </span></td>
 </tr>
+
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk3 [not required]
-<span>
+<td  align="center">OS Roll &#8211; disk3 [not required] <span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk3.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk3.iso">http</a>
 </span></td>
 </tr>
+
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk4 [not required]
-<span>
+<td  align="center">OS Roll &#8211; disk4 [not required] <span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk4.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk4.iso">http</a>
 </span></td>
 </tr>
+
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk5 [not required]
-<span>
+<td  align="center">OS Roll &#8211; disk5 [not required] <span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk5.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk5.iso">http</a>
 </span></td>
 </tr>
+
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk6 [not required]
-<span>
+<td  align="center">OS Roll &#8211; disk6 [not required] <span>
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk6.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.i386.disk6.iso">http</a>
 </span></td>
 </tr>
-</tbody>
 </table>
+
 <p>&nbsp;</p>
 
 <hr />
 <table width="100%">
-<tbody>
 <tr>
 <th width="40%" align="left">x86_64</th>
-<td align="right"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></td>
+<th align="right"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></th>
 </tr>
-</tbody>
+</table>
 
-</table>
 <table border="0" width="100%" align="center">
-<tbody>
 <tr>
-<th width="50%" align="center">CDs</th>
-<th width="50%" align="center">jumbo (DVD)</th>
+  <th width="50%" align="center">CDs</th>
+  <th width="50%" align="center">jumbo (DVD)</th>
 </tr>
 <tr>
-<td align="center">Kernel/Boot Roll
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/kernel-5.2-0.x86_64.disk1.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/kernel-5.2-0.x86_64.disk1.iso">http</a>
-</span></td>
-<td rowspan="4" align="center">Boot, Core, &amp; OS<br />
-Roll<br />
-<span>dvd only</span><br />
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/area51+base+bio+ganglia+hpc+java+kernel+os+sge+viz+web-server+xen-24.06.2009-05.59.46.x86_64.disk1.iso">ftp</a>
-</span></td>
+  <td align="center">Kernel/Boot Roll <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/kernel-5.2-0.x86_64.disk1.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/kernel-5.2-0.x86_64.disk1.iso">http</a>
+  </span></td>
+  <td rowspan="8" align="center">Boot, Core, &amp; OS Roll<br /> <span>dvd only</span><br /> <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/area51+base+bio+ganglia+hpc+java+kernel+os+sge+viz+web-server+xen-24.06.2009-05.59.46.x86_64.disk1.iso">ftp</a> </span></td>
 </tr>
 <tr>
-<td align="center">Core Roll
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/area51+base+ganglia+hpc+java+sge+web-server+xen-10.09.2009-16.14.26.x86_64.disk1.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/area51+base+ganglia+hpc+java+sge+web-server+xen-10.09.2009-16.14.26.x86_64.disk1.iso">http</a>
+  <td align="center">Core Roll <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/area51+base+ganglia+hpc+java+sge+web-server+xen-10.09.2009-16.14.26.x86_64.disk1.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/area51+base+ganglia+hpc+java+sge+web-server+xen-10.09.2009-16.14.26.x86_64.disk1.iso">http</a> </span></td>
+</tr>
+<tr>
+  <td align="center">OS Roll &#8211; disk1 <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk1.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk1.iso">http</a>
 </span></td>
 </tr>
 <tr>
-<td align="center">OS Roll &#8211; disk1
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk1.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk1.iso">http</a>
-</span></td>
+  <td align="center">OS Roll &#8211; disk2 <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk2.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk2.iso">http</a> </span></td>
 </tr>
 <tr>
-<td align="center">OS Roll &#8211; disk2
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk2.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk2.iso">http</a>
-</span></td>
+  <td align="center">OS Roll &#8211; disk3 [not required] <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk3.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk3.iso">http</a> </span></td>
 </tr>
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk3 [not required]
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk3.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk3.iso">http</a>
-</span></td>
+  <td align="center">OS Roll &#8211; disk4 [not required] <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk4.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk4.iso">http</a> </span></td>
 </tr>
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk4 [not required]
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk4.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk4.iso">http</a>
-</span></td>
+  <td align="center">OS Roll &#8211; disk5 [not required] <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk5.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk5.iso">http</a> </span></td>
 </tr>
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk5 [not required]
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk5.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk5.iso">http</a>
-</span></td>
+  <td align="center">OS Roll &#8211; disk6 [not required] <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk6.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk6.iso">http</a> </span></td>
 </tr>
 <tr>
-<td colspan="2" align="center">OS Roll &#8211; disk6 [not required]
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk6.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk6.iso">http</a>
-</span></td>
+  <td align="center">OS Roll &#8211; disk7 [not required] <span>
+  <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk7.iso">ftp</a>
+  <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk7.iso">http</a> </span></td>
 </tr>
-<tr>
-<td colspan="2" align="center">OS Roll &#8211; disk7 [not required]
-<span>
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk7.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/os-5.2-0.x86_64.disk7.iso">http</a>
-</span></td>
-</tr>
-</tbody>
 </table>
+
 <p>&nbsp;</p>
 
 <hr />
-<table width="100%">
-<tbody>
-<tr>
-<th align="left">a la carte</th>
-</tr>
-</tbody>
+<table border="0" width="100%">
+<tr> <th align="left">a la carte</th> </tr>
 </table>
 
 <table  border="0" width="100%">
-<tbody>
 <tr>
 <th width="20%" align="left">roll name</th>
 <th width="60%" align="center">summary</th>
@@ -491,6 +457,4 @@ Roll<br />
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.2/linux/xen-5.2-0.x86_64.disk1.iso">http</a>
 </span></td>
 </tr>
-
-</tbody>
 </table>
