--- a/_downloads/2011-08-10-download-rocks-5-4-3-viper-beta.html
+++ b/_downloads/2011-08-10-download-rocks-5-4-3-viper-beta.html
@@ -24,16 +24,18 @@ author:
 <h3>MD5 Checksums</h3>
 <p>Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4.3/linux/md5sum.txt">MD5 checksums</a> for all the rolls you download.</p>
 <hr />
+
 <table border="0" width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="40%">i386 : Athlon, Pentium, Xeon</th>
 <th style="text-align: right;" width="60%"><img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt="" /></th>
 </tr>
+
 <tr>
 <td style="text-align: center;"><strong>CDs</strong></td>
 <td style="text-align: center;"><strong>jumbo (DVD)</strong></td>
 </tr>
+
 <tr>
 <td style="text-align: center;">Kernel/Boot Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4.3/linux/kernel-5.4.3-0.i386.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4.3/linux/kernel-5.4.3-0.i386.disk1.iso">http</a></td>
@@ -42,6 +44,7 @@ Java, Python, Perl, Bio, SGE, Web Server, Xen, &amp; OS Rolls<br />
 [ dvd only ]<br />
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4.3/linux/area51+base+bio+condor+ganglia+hpc+java+kernel+os+perl+python+sge+web-server+xen-5.4.3.i386.disk1.iso">ftp</a></td>
 </tr>
+
 <tr>
 <td style="text-align: center;">Base Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4.3/linux/base-5.4.3-0.i386.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4.3/linux/base-5.4.3-0.i386.disk1.iso">http</a></td>
@@ -54,14 +57,14 @@ Java, Python, Perl, Bio, SGE, Web Server, Xen, &amp; OS Rolls<br />
 <td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4.3/linux/os-5.4.3-0.i386.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4.3/linux/os-5.4.3-0.i386.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
+
 <hr />
+
 <table style="text-align: center;" border="0" width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="40%">x86_64</th>
-<td style="text-align: right;" width="60%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></td>
+<th style="text-align: right;" width="60%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></th>
 </tr>
 <tr>
 <td style="text-align: center;" width="40%"><strong>CDs</strong></td>
@@ -87,13 +90,12 @@ Java, Perl, Python, Bio, SGE, Web Server, Xen, &amp; OS Rolls<br />
 <td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4.3/linux/os-5.4.3-0.x86_64.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4.3/linux/os-5.4.3-0.x86_64.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
+
 <p>&nbsp;</p>
 <hr />
 <h3>Individual Rolls</h3>
-<table width="100%">
-<tbody>
+<table border="0" width="100%">
 <tr>
 <th style="text-align: left;" width="20%">roll name</th>
 <th style="text-align: center;" width="60%">summary</th>
@@ -273,5 +275,4 @@ Java, Perl, Python, Bio, SGE, Web Server, Xen, &amp; OS Rolls<br />
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4.3/linux/xen-5.4.3-1.x86_64.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4.3/linux/xen-5.4.3-1.x86_64.disk1.iso">http</a></td>
 </tr>
-</tbody>
 </table>
