--- a/_downloads/2012-05-09-download-rocks-5-5-mamba.html
+++ b/_downloads/2012-05-09-download-rocks-5-5-mamba.html
@@ -28,7 +28,6 @@ author:
 <p>Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.5/linux/md5sums.txt">MD5 checksums</a> for all the rolls you download.</p>
 <hr />
 <table border="0" width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="40%">i386 : Athlon, Pentium, Xeon</th>
 <th style="text-align: right;" width="60%"><img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt="" /></th>
@@ -57,14 +56,13 @@ Java, Python, Perl, Bio, SGE, Web Server, Xen, &amp; OS Rolls<br />
 <td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.5/linux/os-5.5-0.i386.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.5/linux/os-5.5-0.i386.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
 <hr />
+
 <table style="text-align: center;" border="0" width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="40%">x86_64</th>
-<td style="text-align: right;" width="60%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></td>
+<th style="text-align: right;" width="60%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></th>
 </tr>
 <tr>
 <td style="text-align: center;" width="40%"><strong>CDs</strong></td>
@@ -90,13 +88,12 @@ Java, Perl, Python, Bio, SGE, Web Server, Xen, &amp; OS Rolls<br />
 <td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.5/linux/os-5.5-0.x86_64.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.5/linux/os-5.5-0.x86_64.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
 <hr />
+
 <p>&nbsp;</p>
 <h3>Individual Rolls</h3>
 <table width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="20%">roll name</th>
 <th style="text-align: center;" width="60%">summary</th>
@@ -276,5 +273,4 @@ Java, Perl, Python, Bio, SGE, Web Server, Xen, &amp; OS Rolls<br />
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.5/linux/xen-5.5-0.x86_64.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.5/linux/xen-5.5-0.x86_64.disk1.iso">http</a></td>
 </tr>
-</tbody>
 </table>
