--- a/_downloads/2012-11-29-download-rocks-6-1-emerald-boa.html
+++ b/_downloads/2012-11-29-download-rocks-6-1-emerald-boa.html
@@ -14,8 +14,7 @@ tags: []
 <p>If you wish to build a custom cluster, you must choose from our a la carte selection, but make sure to download the required Base, Kernel/Boot and all of the OS rolls.</p>
 <h3>MD5 Checksums</h3>
 <p>Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/md5sums.txt">MD5 checksums</a> for all the rolls you download.</p>
-<table border="1" width="100%">
-<tbody>
+<table border="0" width="100%">
 <tr>
 <th style="text-align: left;" width="50%">i386 : Athlon, Pentium, Xeon</th>
 <th style="text-align: right;" width="50%"><img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img
@@ -26,34 +25,32 @@ src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt=""
 <td style="text-align: center;"><strong>jumbo (DVD)</strong></td>
 </tr>
 <tr>
-<td style="text-align: center;">Kernel/Boot Roll<br />
+<td style="text-align: center;">Kernel/Boot Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/kernel-6.1-0.i386.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/kernel-6.1-0.i386.disk1.iso">http</a></td>
 <td style="text-align: center;" rowspan="5">Boot, Base, Service Pack, Area51, Condor, Ganglia, HPC,<br />
-Java, Python, Perl, Bio, SGE, Web Server, ZFS &amp; OS Rolls<br />
-[ dvd only ]<br />
+Java, Python, Perl, Bio, SGE, Web Server, ZFS &amp; OS Rolls <br> [dvd only]
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/area51+base+bio+condor+ganglia+hpc+java+kernel+os+perl+python+service-pack+sge+web-server+zfs-linux-6.1.i386.disk1.iso">ftp</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">Base Roll<br />
+<td style="text-align: center;">Base Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/base-6.1-0.i386.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/base-6.1-0.i386.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">Service Pack Roll<br />
+<td style="text-align: center;">Service Pack Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/service-pack-6.1-1.i386.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/service-pack-6.1-1.i386.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">OS Roll - disk1<br />
+<td style="text-align: center;">OS Roll - disk1
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/os-6.1-0.i386.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/os-6.1-0.i386.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">OS Roll - disk2<br />
+<td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/os-6.1-0.i386.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/os-6.1-0.i386.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
+
 <hr />
-<table style="text-align: center;" border="1" width="100%">
-<tbody>
+<table style="text-align: center;" border="0" width="100%">
 <tr>
 <th style="text-align: left;" width="50%">x86_64</th>
 <td style="text-align: right;" width="50%"><img src="/assets/logo-xeon.jpg"
@@ -64,35 +61,32 @@ alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></td>
 <td style="text-align: center;" width="50%"><strong>jumbo (DVD)</strong></td>
 </tr>
 <tr>
-<td style="text-align: center;">Kernel/Boot Roll<br />
+<td style="text-align: center;">Kernel/Boot Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/kernel-6.1-0.x86_64.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/kernel-6.1-0.x86_64.disk1.iso">http</a></td>
 <td style="text-align: center;" rowspan="5">Boot, Base, Service-Pack, Area51, Condor, Ganglia, HPC,<br />
-Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
-[ dvd only ]<br />
+Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls <br>[dvd only]
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/area51+base+bio+condor+ganglia+hpc+java+kernel+kvm+os+perl+python+service-pack+sge+web-server+zfs-linux-6.1.x86_64.disk1.iso">ftp</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">Base Roll<br />
+<td style="text-align: center;">Base Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/base-6.1-0.x86_64.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/base-6.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">Service Pack Roll<br />
+<td style="text-align: center;">Service Pack Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/service-pack-6.1-1.x86_64.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/service-pack-6.1-1.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">OS Roll - disk1<br />
+<td style="text-align: center;">OS Roll - disk1
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/os-6.1-0.x86_64.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/os-6.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td style="text-align: center;">OS Roll - disk2<br />
+<td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/os-6.1-0.x86_64.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/os-6.1-0.x86_64.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
 
 <h3>Individual Rolls</h3>
-<table width="100%" border="1">
-<tbody>
+<table width="100%" border="0">
 <tr>
 <th style="text-align: left;" width="14%">roll name</th>
 <th style="text-align: center;" width="60%">summary</th>
@@ -100,8 +94,7 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <th style="text-align: center;" width="13%">x86_64</th>
 </tr>
 <tr>
-<td>base<br />
-<strong>(required)</strong></td>
+<td>base <strong>(required)</strong></td>
 <td>Rocks Base Roll</td>
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/base-6.1-0.i386.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/base-6.1-0.i386.disk1.iso">http</a></td>
@@ -109,8 +102,7 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/base-6.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td>kernel<br />
-<strong>(required)</strong></td>
+<td>kernel <strong>(required)</strong></td>
 <td>Rocks Bootable Kernel Roll</td>
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/kernel-6.1-0.i386.disk1.iso">ftp</a> 
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/kernel-6.1-0.i386.disk1.iso">http</a></td>
@@ -118,8 +110,7 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/kernel-6.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td>service-pack<br />
-<strong>(required)</strong></td>
+<td>service-pack <strong>(required)</strong></td>
 <td>Service Pack Fixes</td>
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/service-pack-6.1-1.i386.disk1.iso">ftp</a>      
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/service-pack-6.1-1.i386.disk1.iso">http</a></td>
@@ -127,8 +118,7 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/service-pack-6.1-1.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td>os<br />
-<strong>(required)</strong></td>
+<td>os <strong>(required)</strong></td>
 <td colspan="3">CentOS 6.3 w/updates pre-applied (you may also use your own Red Hat Enterprise Linux 6.3 media)</td>
 </tr>
 <tr>
@@ -235,7 +225,7 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/ganglia-6.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td>hpc<br />
+<td>hpc
 <strong> </strong></td>
 <td>Rocks HPC Roll</td>
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/hpc-6.1-0.i386.disk1.iso">ftp</a>      
@@ -262,7 +252,7 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/perl-6.1-0.x86_64.disk1.iso">http</a></td>
 </tr>
 <tr>
-<td>python<br />
+<td>python
 <strong> </strong></td>
 <td>Python 2.7 and Python 3.x</td>
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/python-6.1-0.i386.disk1.iso">ftp</a>      
@@ -300,5 +290,4 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, ZFS &amp; OS Rolls<br />
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.1/linux/zfs-linux-0.6.0.rc12-12.x86_64.disk1.iso">ftp</a>      
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.1/linux/zfs-linux-0.6.0.rc12-12.x86_64.disk1.iso">http</a></td>
 </tr>
-</tbody>
 </table>
