--- a/_downloads/2014-04-15-download-rocks-6-1-1-sand-boa.html
+++ b/_downloads/2014-04-15-download-rocks-6-1-1-sand-boa.html
@@ -22,11 +22,10 @@ Openssl that addresses the <a href="http://heartbleed.com">heartbleed vulnerabil
 <h3>Downloads</h3>
 <P>All ISOsm DVDs and MD5 checksums are available for downloads from <a href="{{isodir611}}">here</a>. </p>
 
-<table style="text-align: center;" border="1" width="100%">
-<tbody>
+<table style="text-align: center;" border="0" width="100%">
 <tr>
 <th style="text-align: left;" width="50%">x86_64</th>
-<td style="text-align: right;" width="50%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></td>
+<th style="text-align: right;" width="50%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></th>
 </tr>
 <tr>
 <td style="text-align: center;" width="50%"><strong>CDs</strong></td>
@@ -43,30 +42,28 @@ Web Server, KVM, ZFS &amp; OS Rolls<br />[ dvd only ]<br />
 <tr> <td style="text-align: center;">OS Roll - disk1<br /></td> </tr>
 <tr> <td style="text-align: center;">OS Roll - disk2<br /> </td> </tr>
 <tr> <td style="text-align: center;">OS Roll - disk3<br /> </td> </tr>
-</tbody>
 </table>
 
 <h3>Individual Rolls</h3>
 
-<table width="100%" border="1">
-<tbody>
+<table width="100%" border="0">
 <tr>
 <th style="text-align: left;" width="30%">roll name</th>
 <th style="text-align: center;" width="70%">summary x86_64</th>
 </tr>
 
 <tr>
-<td>base<br /> <strong>(required)</strong></td>
+<td>base <strong>(required)</strong></td>
 <td>Rocks Base Roll</td>
 </tr>
 
 <tr>
-<td>kernel<br /> <strong>(required)</strong></td>
+<td>kernel <strong>(required)</strong></td>
 <td>Rocks Bootable Kernel Roll</td>
 </tr>
 
 <tr>
-<td>os<br /> <strong>(required)</strong></td>
+<td>os <strong>(required)</strong></td>
 <td colspan="2">CentOS 6.5 w/updates pre-applied (you may also use your own Red Hat Enterprise Linux 6.5 media)</td>
 </tr>
 
@@ -104,67 +101,81 @@ Web Server, KVM, ZFS &amp; OS Rolls<br />[ dvd only ]<br />
 <td></td>
 <td>os disk 7 (optional)</td>
 </tr>
+
 <tr>
 <td></td>
 <td>os disk 8 (optional)</td>
 </tr>
+
 <tr>
 <td></td>
 <td>os disk 9 (optional)</td>
 </tr>
+
 <tr>
 <td>area51</td>
 <td>System security related services and utilities</td>
 </tr>
+
 <tr>
 <td>bio</td>
 <td>Bioinformatics utilities</td>
 </tr>
+
 <tr>
 <td>Fingerprint</td>
 <td>Fingerprint application dependencies</td>
 </tr>
+
 <tr>
 <td>HTCondor</td>
 <td>HTCondor High Throughput Computing (version 8.0.6)</td>
 </tr>
+
 <tr>
 <td>ganglia</td>
 <td>Cluster monitoring system from UCB</td>
 </tr>
+
 <tr>
 <td>hpc<br />
 <strong> </strong></td>
 <td>Rocks HPC Roll</td>
 </tr>
+
 <tr>
 <td>kvm</td>
 <td>Support for building KVM VMs on cluster nodes</td>
 </tr>
+
 <tr>
 <td>perl</td>
 <td>Support for Newer Version of Perl</td>
 </tr>
+
 <tr>
 <td>python<br />
 <strong> </strong></td>
 <td>Python 2.7 and Python 3.x</td>
 </tr>
+
 <tr>
 <td>sge</td>
 <td>Sun Grid Engine (Open Grid Scheduler)  job queueing system (Version GE2011)</td>
 </tr>
+
 <tr>
 <td>torque</td>
 <td>Torque+Maui job queueing system (packaged by HPC Group at University of Tromso, Norway)</td>
 </tr>
+
 <tr>
 <td>web-server</td>
 <td>Rocks Web Server Roll</td>
 </tr>
+
 <tr>
 <td>zfs-linux</td>
 <td>ZFS On Linux Roll. Build and Manage Multi Terabyte File Systems.</td>
 </tr>
-</tbody>
 </table>
