--- a/_downloads/third-party-rolls.html
+++ b/_downloads/third-party-rolls.html
@@ -18,11 +18,10 @@ your server.</li>
 </ol>
 <hr />
 
-<table width="80%" class="centered">
-<tbody>
+<table width="100%" class="centered">
 <tr>
-<th width="10%" align="left">roll name</th>
-<th width="70%" align="center">summary</th>
+<th width="15%" align="left">roll name</th>
+<th width="65%" align="center">summary</th>
 <th width="10%" align="center">i386</th>
 <th width="10%" align="center">x86_64</th>
 </tr>
@@ -84,10 +83,9 @@ by Myricom, Inc)</td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
 <tr>
-<td valign="top">totalview</span></td>
+<td valign="top"><span class="strongword">totalview</span></td>
 <td>TotalView Debugger 8.6.0-2. (packaged by StackIQ, Inc)</td>
 <td></td>
 <td align="center" valign="top"><a href="http://www.stackiq.com/rolls/">StackIQ</a></td>
 </tr>
-</tbody>
 </table>
