--- a/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos-solaris.html
+++ b/_downloads/2009-12-17-download-rocks-5-3-rolled-tacos-solaris.html
@@ -19,69 +19,74 @@ author:
 ---
 
 <h3>Building a Compute Cluster</h3>
-<p>
-These rolls are used to configure Solaris client nodes.</p>
+<p> These rolls are used to configure Solaris client nodes.</p>
+
 <h3>MD5 Checksums</h3>
-<p>
-Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/md5sum.txt">MD5 checksums</a> for all the rolls you download.</p>
+<p> Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/md5sum.txt">MD5 checksums</a> for all the rolls you download.</p>
 <hr />
+
 <table width="100%">
-<tr>
-<th align="left">&agrave; la carte</th>
-</tr>
+<tr> <th align="left">&agrave; la carte</th> </tr>
 </table>
+
 <table width="100%">
 <tr>
-<th width="10%" align="left">roll name</th>
-<th width="50%" align="center">summary</th>
+<th width="20%" align="left">roll name</th>
+<th width="40%" align="center">summary</th>
 <th width="10%" align="center">sunos</th>
 </tr>
+
 <tr>
-<td>base<b>(required)</b></td>
+<td>base<b> (required)</b></td>
 <td>Rocks Base Roll</td>
 <td align="center">
         <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/base-5.3-0.sunos.iso">ftp</a>
         <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/base-5.3-0.sunos.iso">http</a>
-    </td>
+</td>
 </tr>
+
 <tr>
-<td>jumpstart<b>(required)</b></td>
+<td>jumpstart<b> (required)</b></td>
 <td>Adds JumpStart support to configure Solaris client nodes</td>
 <td align="center">
         <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/jumpstart-5.3-0.sunos.iso">ftp</a>
         <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/jumpstart-5.3-0.sunos.iso">http</a>
-    </td>
+</td>
 </tr>
+
 <tr>
 <td>bio</td>
 <td>Bioinformatics utilities</td>
 <td align="center">
         <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/bio-5.3-0.sunos.iso">ftp</a>
         <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/bio-5.3-0.sunos.iso">http</a>
-    </td>
+</td>
 </tr>
+
 <tr>
 <td>ganglia</td>
 <td>Cluster monitoring system</td>
 <td align="center">
         <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/ganglia-5.3-0.sunos.iso">ftp</a>
         <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/ganglia-5.3-0.sunos.iso">http</a>
-    </td>
+</td>
 </tr>
+
 <tr>
 <td>hpc<b></b></td>
 <td>Rocks HPC Roll</td>
 <td align="center">
         <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/hpc-5.3-0.sunos.iso">ftp</a>
         <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/hpc-5.3-0.sunos.iso">http</a>
-    </td>
+</td>
 </tr>
+
 <tr>
 <td>sge</td>
 <td>Sun Grid Engine job queueing system</td>
 <td align="center">
         <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.3/sunos/sge-5.3-0.sunos.iso">ftp</a>
         <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.3/sunos/sge-5.3-0.sunos.iso">http</a>
-    </td>
+</td>
 </tr>
 </table>
