--- a/_downloads/2010-11-03-download-rocks-5-4-maverick.html
+++ b/_downloads/2010-11-03-download-rocks-5-4-maverick.html
@@ -19,44 +19,40 @@ for all the rolls you download.</p>
 
 <hr />
 <table width="100%">
-<tbody>
 <tr>
-<th style="text-align: left;" width="40%">Athlon, Pentium, Xeon, i386</th>
-<th style="text-align: right;"><img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img
-src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt="" /></th>
+  <th style="text-align: left;" width="40%">Athlon, Pentium, Xeon, i386</th>
+  <th style="text-align: right;"><img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt="" /></th>
 </tr>
-</tbody>
 </table>
 
 <table border="0" width="100%">
-<tbody>
 <tr>
-<th style="text-align: center;" width="40%">CDs</th>
-<th style="text-align: center;" width="60%">jumbo (DVD)</th>
+  <th style="text-align: center;" width="40%">CDs</th>
+  <th style="text-align: center;" width="60%">jumbo (DVD)</th>
 </tr>
+
 <tr>
-<td style="text-align: center;">Kernel/Boot Roll
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/kernel-5.4-0.i386.disk1.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/kernel-5.4-0.i386.disk1.iso">http</a>
-</td>
-<td style="text-align: center;" rowspan="9">Boot, Core, &amp; OS Roll<br />
-<span>dvd only</span>
-<span><br />
-<a
-href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+condor+ganglia+hpc+kernel+os+sge+web-server+xen-5.4.i386.disk1.iso">ftp</a> 
-</span></td>
+  <td style="text-align: center;">Kernel/Boot Roll
+    <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/kernel-5.4-0.i386.disk1.iso">ftp</a>
+    <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/kernel-5.4-0.i386.disk1.iso">http</a>
+  </td>
+  <td style="text-align: center;" rowspan="9">Boot, Core, &amp; OS Roll<br /> <span>dvd only</span> <span><br /> 
+    <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+condor+ganglia+hpc+kernel+os+sge+web-server+xen-5.4.i386.disk1.iso">ftp</a> </span>
+  </td>
 </tr>
+
 <tr>
-<td style="text-align: center;">Core Roll
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+ganglia+hpc+sge+web-server+xen-5.4.i386.disk1.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/area51+base+ganglia+hpc+sge+web-server+xen-5.4.i386.disk1.iso">http</a>
-</td>
+  <td style="text-align: center;">Core Roll
+    <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+ganglia+hpc+sge+web-server+xen-5.4.i386.disk1.iso">ftp</a>
+    <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/area51+base+ganglia+hpc+sge+web-server+xen-5.4.i386.disk1.iso">http</a>
+  </td>
 </tr>
+
 <tr>
-<td style="text-align: center;">OS Roll &#8211; disk1
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk1.iso">ftp</a>
-<a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk1.iso">http</a>      
-</td>
+  <td style="text-align: center;">OS Roll &#8211; disk1
+    <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk1.iso">ftp</a>
+    <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk1.iso">http</a>      
+  </td>
 </tr>
 
 <tr>
@@ -100,40 +96,34 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.i386.disk7.iso">http</a>
 </td>
 </tr>
-</tbody>
 </table>
 
 <p>&nbsp;</p>
 <hr />
 <table width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="40%">x86_64</th>
-<td style="text-align: right;"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></td>
+<th style="text-align: right;"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></th>
 </tr>
-</tbody>
 </table>
 
 <table style="text-align: center;" border="0" width="100%">
-<tbody>
 <tr>
 <th style="text-align: center;" width="40%">CDs</th>
 <th style="text-align: center;" width="60%">jumbo (DVD)</th>
 </tr>
+
 <tr>
 <td style="text-align: center;">Kernel/Boot Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/kernel-5.4-0.x86_64.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/kernel-5.4-0.x86_64.disk1.iso">http</a>
 </td>
-<td style="text-align: center;" rowspan="10">Boot, Core, &amp; OS Roll<br />
-<span>dvd only</span>
-<span><br />
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+condor+ganglia+hpc+kernel+os+sge+web-server+xen-5.4.x86_64.disk1.iso">ftp</a>
-</span></td>
+<td style="text-align: center;" rowspan="10">Boot, Core, &amp; OS Roll<br /> <span>dvd only</span> <span><br />
+<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+condor+ganglia+hpc+kernel+os+sge+web-server+xen-5.4.x86_64.disk1.iso">ftp</a> </span>
+</td>
 </tr>
 <tr>
-<td style="text-align: center;">Core Roll
-<a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+ganglia+hpc+sge+web-server+xen-5.4.x86_64.disk1.iso">ftp</a>
+<td style="text-align: center;">Core Roll <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+ganglia+hpc+sge+web-server+xen-5.4.x86_64.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/area51+base+ganglia+hpc+sge+web-server+xen-5.4.x86_64.disk1.iso">http</a>
 </td>
 </tr>
@@ -185,21 +175,15 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/os-5.4-0.x86_64.disk8.iso">http</a>
 </td>
 </tr>
-</tbody>
 </table>
 
 <p>&nbsp;</p>
 <hr />
 <table width="100%">
-<tbody>
-<tr>
-<th style="text-align: left;">a la carte</th>
-</tr>
-</tbody>
+<tr> <th style="text-align: left;">a la carte</th> </tr>
 </table>
 
 <table width="100%" border="0">
-<tbody>
 <tr>
 <th style="text-align: left;" width="20%">roll name</th>
 <th style="text-align: center;" width="57%">summary</th>
@@ -208,7 +192,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </tr>
 
 <tr>
-<td>base <strong>(required)</strong></td>
+<td>base <strong> (required)</strong></td>
 <td>Rocks Base Roll</td>
 <td style="text-align: center;">
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/base-5.4-0.i386.disk1.iso">ftp</a>
@@ -221,7 +205,7 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 </tr>
 
 <tr>
-<td>kernel <strong>(required)</strong></td>
+<td>kernel <strong> (required)</strong></td>
 <td>Rocks Bootable Kernel Roll</td>
 <td style="text-align: center;">
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/kernel-5.4-0.i386.disk1.iso">ftp</a>
@@ -472,5 +456,4 @@ href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-5.4/linux/area51+base+bio+cond
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-5.4/linux/xen-5.4-0.x86_64.disk1.iso">http</a>
 </td>
 </tr>
-</tbody>
 </table>
