--- a/_downloads/2012-05-09-download-rocks-6-0-mamba.html
+++ b/_downloads/2012-05-09-download-rocks-6-0-mamba.html
@@ -28,12 +28,11 @@ author:
 <p>Please double check the <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.0/linux/md5sums.txt">MD5 checksums</a> for all the rolls you download.</p>
 <hr />
 <table border="0" width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="40%">i386 : Athlon, Pentium, Xeon</th>
-<th style="text-align: right;" width="60%"><img src="/assets/logo-athlon.jpg"
-alt="" /><img src="/assets/logo-pentium3.jpg" alt="" /><img
-src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt="" /></th>
+<th style="text-align: right;" width="60%">
+  <img src="/assets/logo-athlon.jpg" alt="" /><img src="/assets/logo-pentium3.jpg" alt="" />
+  <img src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt="" /></th>
 </tr>
 <tr>
 <td style="text-align: center;"><strong>CDs</strong></td>
@@ -42,9 +41,7 @@ src="/assets/logo-pentium4.jpg" alt="" /><img src="/assets/logo-xeon.jpg" alt=""
 <tr>
 <td style="text-align: center;">Kernel/Boot Roll
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.0/linux/kernel-6.0-0.i386.disk1.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.0/linux/kernel-6.0-0.i386.disk1.iso">http</a></td>
-<td style="text-align: center;" rowspan="5">Boot, Base, Area51, Condor, Ganglia, HPC,<br />
-Java, Python, Perl, Bio, SGE, Web Server, &amp; OS Rolls<br />
-[ dvd only ]<br />
+<td style="text-align: center;" rowspan="5">Boot, Base, Area51, Condor, Ganglia, HPC,<br /> Java, Python, Perl, Bio, SGE, Web Server, &amp; OS Rolls<br /> [ dvd only ]<br />
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.0/linux/area51+base+bio+condor+ganglia+hpc+java+kernel+os+perl+python+sge+web-server-6.0.i386.disk1.iso">ftp</a></td>
 </tr>
 <tr>
@@ -59,14 +56,13 @@ Java, Python, Perl, Bio, SGE, Web Server, &amp; OS Rolls<br />
 <td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.0/linux/os-6.0-0.i386.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.0/linux/os-6.0-0.i386.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
 <hr />
+
 <table style="text-align: center;" border="0" width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="40%">x86_64</th>
-<td style="text-align: right;" width="60%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></td>
+<th style="text-align: right;" width="60%"><img src="/assets/logo-xeon.jpg" alt="" /><img src="/assets/logo-opteron.jpg" alt="" /></th>
 </tr>
 <tr>
 <td style="text-align: center;" width="40%"><strong>CDs</strong></td>
@@ -92,12 +88,12 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, &amp; OS Rolls<br />
 <td style="text-align: center;">OS Roll - disk2
 <a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.0/linux/os-6.0-0.x86_64.disk2.iso">ftp</a> <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.0/linux/os-6.0-0.x86_64.disk2.iso">http</a></td>
 </tr>
-</tbody>
 </table>
+
 <hr />
 <h3>Individual Rolls</h3>
+
 <table width="100%">
-<tbody>
 <tr>
 <th style="text-align: left;" width="20%">roll name</th>
 <th style="text-align: center;" width="60%">summary</th>
@@ -284,5 +280,4 @@ Java, Perl, Python, Bio, SGE, Web Server, KVM, &amp; OS Rolls<br />
 <td style="text-align: center;"><a href="ftp://ftp.rocksclusters.org/pub/rocks/rocks-6.0/linux/web-server-6.0-0.x86_64.disk1.iso">ftp</a>
 <a href="http://www.rocksclusters.org/ftp-site/pub/rocks/rocks-6.0/linux/web-server-6.0-0.x86_64.disk1.iso">http</a></td>
 </tr>
-</tbody>
 </table>
